# vscode-multi-cli

./: README.md  conftest.py  pyproject.toml  zensical.toml
.cursor/rules/: project-description.mdc
.github/workflows/: auto-tag.yml  docs.yml  publish.yml  test.yml
cursor_multi/: cli.py  cli_helpers.py  errors.py  git_helpers.py  git_merge_branch.py  git_set_branch.py  ignore_files.py  init.py  merge_branch.py  merge_cursor.py  merge_vscode.py  merge_vscode_helpers.py  merge_vscode_launch.py  merge_vscode_settings.py  merge_vscode_tasks.py  paths.py  repos.py  rules.py  set_branch.py  settings.py  setup.py  sync.py  sync_cursor_rules.py  sync_vscode_helpers.py  sync_vscode_settings.py  utils.py
docs/: configuration.md  contributing.md  extension.md  getting-started.md  index.md
docs/commands/: git.md  index.md  init.md  set-branch.md  sync-claude.md  sync-ruff.md  sync-vscode.md  sync.md
docs/stylesheets/: extra.css
multi/: cli.py  init.py  sync_claude.py  sync_vscode_helpers.py  sync_vscode_launch.py  sync_vscode_tasks.py
multi/resources/: init_readme.md
scripts/: build.sh  setup.sh
tests/: __init__.py  conftest.py  test_git_helpers.py  test_git_set_branch.py  test_ignore_files.py  test_merge_cursor.py  test_merge_vscode_launch.py  test_merge_vscode_settings.py  test_merge_vscode_tasks.py  test_sync_claude.py  test_sync_vscode_launch.py  test_sync_vscode_settings.py  test_sync_vscode_tasks.py  test_utils.py
vscode_multi/: paths.py  repos.py  sync.py  sync_claude.py  sync_ruff.py  sync_vscode_launch.py  sync_vscode_settings.py  sync_vscode_tasks.py
