[project]
name = "cursor-multi"
version = "0.1.0"
description = "Cursor Multi"
authors = [{ name = "Gabe Montague", email = "gabemontague@outlook.com" }]
dependencies = ["click>=8.1.0"]

[project.scripts]
multi = "cursor_multi.cli:main"

[project.optional-dependencies]
dev = ["ruff>=0.2.0", "pytest>=8.0.0", "pytest-cov>=4.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "B", "W", "C90"]
ignore = ["C901", "E501", "F821"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=cursor_multi --cov-report=term-missing"
