[project]
name = "cursor-multi"
version = "0.1.0"
description = "Cursor Multi"
authors = [{ name = "Gabe Montague", email = "gabemontague@outlook.com" }]
dependencies = ["click>=8.2.0", "pyyaml>=6.0.2"]

[project.scripts]
multi = "cursor_multi.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.10",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "B", "W", "C90"]
ignore = ["C901", "E501", "F821"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
